syntax = "proto3";
package realionetwork.asset.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "realionetwork/asset/v1/params.proto";
import "realionetwork/asset/v1/token.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/realiotech/realio-network/x/asset/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/params";
  }

  // Tokens queries the tokens of the module.
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/tokens";
  }

  // Token queries the token of the module based on symbol.
  rpc Token(QueryTokenRequest) returns (QueryTokenResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/tokens/{symbol}";
  }

  // QueryPrivilege queries the privilege states.
  rpc QueryPrivilege(QueryPrivilegeRequest) returns (QueryPrivilegeResponse);
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryTokensRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryTokensResponse {
  // params holds all the parameters of this module.
  repeated Token tokens = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryTokenRequest {
  // symbol is the token symbol to query for.
  string symbol = 1;
}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryTokenResponse {
  // params holds all the parameters of this module.
  Token token = 1 [ (gogoproto.nullable) = false ];
}

// QueryPrivilegeRequest defines the request to query privilege states.
message QueryPrivilegeRequest {
  // name of the privilege
  string privilege_name = 1;
  // request message
  google.protobuf.Any request = 2;
}

// QueryPrivilegeResponse defines the response to query privilege states.
message QueryPrivilegeResponse {
  // response message
  google.protobuf.Any response = 1;
}